# ChangeLog for games-emulation/advancemame
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-emulation/cvs-repo/gentoo-x86/games-emulation/advancemame/ChangeLog,v 1.7 2004/01/12 05:50:50 vapier Exp $

*advancemame-0.78.0 (12 Jan 2004)

  12 Jan 2004; Mike Frysinger <vapier@gentoo.org> :
  Version bump #37937.

*advancemame-0.77.2 (05 Jan 2004)

  05 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org>
  advancemame-0.61.1.ebuild, advancemame-0.70.0.ebuild,
  advancemame-0.76.0.ebuild, advancemame-0.77.2.ebuild:
  version bump

  29 Nov 2003; David Holm <dholm@gentoo.org> advancemame-0.76.0.ebuild:
  Added to ~ppc.

  31 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org>
  advancemame-0.70.0.ebuild, advancemame-0.76.0.ebuild:
  These need >=svgalib-1.9 and that's not stable yet.  Marked ~x86 for now.

*advancemame-0.76.0 (25 Oct 2003)

  25 Oct 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bumpage + clean up + games.eclass.

*advancemame-0.70.0 (13 Jul 2003)

  13 Jul 2003; Martin Schlemmer <azarah@gentoo.org> advancemame-0.70.0.ebuild:
  New version.  Closes bug #18798.

  03 Feb 2003; Martin Schlemmer <azarah@gentoo.org> advancemame-0.63.0.ebuild :

  Add missing 'mkdir -p ${S}' to src_unpack(), closing bug #15046.

*advancemame-0.63.0 (03 Feb 2003)

  03 Feb 2003; Martin Schlemmer <azarah@gentoo.org> advancemame-0.63.0.ebuild :

  New version.

*advancemame-0.62.2 (25 Dec 2002)

  25 Dec 2002; Martin Schlemmer <azarah@gentoo.org> advancemame-0.62.2.ebuild :

  New version.

  23 Dec 2002; Martin Schlemmer <azarah@gentoo.org> advancemame-0.61.1.ebuild :

  Replace econf with ./configure, as it breaks if we pass --host.

  28 Nov 2002; Mark Guertin <gerk@gentoo.org> advancemame-0.62.0.ebuild,
  advancemame-0.61.1.ebuild:
  
  Set -ppc in keywords, uses x86 asm

*advancemame-0.62.0 (20 Nov 2002)

  20 Nov 2002; Martin Schlemmer <azarah@gentoo.org> advancemame-0.62.0.ebuild :
