@@ -1,6 +1,8 @@
-MD5 adc7a20f4cd0bf35ba924e5bb8dccd1e ChangeLog 2242
+MD5 0df8f6de2b661997cedea10b89a45890 ChangeLog 2464
 MD5 8fdc3b80b152afdec14bd9018d024bc3 advancemame-0.77.2.ebuild 1527
 MD5 9ad5b3665357db5e5bceb77f8631577f advancemame-0.78.0.ebuild 1527
 MD5 972b8c9f939a33a7074e0819fb55455c metadata.xml 962
+MD5 f1bea5f34a59136d6f65cf81050321c1 advancemame-0.81.0.ebuild 1822
 MD5 d5d580fd228271ce09bb83027f21a14b files/digest-advancemame-0.77.2 72
 MD5 c5dd3cee0f731cccc30e89067f0e0777 files/digest-advancemame-0.78.0 72
+MD5 ee6170be60235d6f49882f80dadd122d files/digest-advancemame-0.81.0 72
