@@ -1,6 +1,10 @@
 # ChangeLog for games-emulation/advancemame
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-emulation/cvs-repo/gentoo-x86/games-emulation/advancemame/ChangeLog,v 1.7 2004/01/12 05:50:50 vapier Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/games-emulation/cvs-repo/gentoo-x86/games-emulation/advancemame/ChangeLog,v 1.8 2004/04/08 20:29:07 mr_bones_ Exp $
+
+  08 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> advancemame-0.81.0.ebuild:
+  version bump; added freetype2 support (use truetype); added debug eclass
+  support; use keepdir on empty directories in GAMES_DATADIR
 
 *advancemame-0.78.0 (12 Jan 2004)
 
